k8s/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
  name: webapp
  namespace: webapp
spec:
  progressDeadlineSeconds: 600
  replicas: 4
  selector:
    matchLabels:
      app: webapp
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webapp
    spec:
      containers:
      - image: us-central1-docker.pkg.dev/zaurproject/zaurrepo/python-http-app:00004
        imagePullPolicy: Always
        name: webapp
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
