k8s/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: webapp
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: webapp
