k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"
  name: webapp-ingress
  namespace: webapp
spec:
  ingressClassName: nginx
  rules:
  - host: webapp.loc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "webapp-service"
            port:
              number: 80
