k8s/NetworkDenyAll.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-pods
  namespace: webapp
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
